# handlebars

./: .gitignore  Cargo.toml  README.md  fields.data  fields.json  mock_data copy.json  mock_data.json  table.html  template.hbs  template1.css  template1.hbs
editors/: inline-editor.html
src/: main-SAVE.rs  main-test-passing-vec.rs  main.rs
templates/: template1.html
