[package]
name = "handlebars"
version = "0.1.0"
authors = ["Jon Catlin <jonc@destini.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4.0" }
# quick-error = "1.2.3"
# pest = "2.1.0"
# pest_derive = "2.1.0"
serde = "1.0.0"
serde_json = "1.0.39"
# walkdir = { version = "2.2.3", optional = true }

env_logger = "0.7.1"
handlebars = "3.0.1"
serde_derive = "1.0.104"
regex = "1.3.4"